--- a/src/main/resources/assets/emi_create_schematics/lang/en_us.json
+++ b/src/main/resources/assets/emi_create_schematics/lang/en_us.json
@@ -1,3 +1,3 @@
 {
-  "gui.schematic_display.clipboard.save_jei": "Save to JEI bookmarks"
+  "gui.emi_create_schematics.clipboard.favourite": "Transfer all items to EMI Favourites"
 }
